[package]
name = "quaternion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils" }
linalg = {path = "../linalg", default-features = false}
libm = "0.2.8"

[features]
default = ["no_std"]
std = ["linalg/std"]
no_std = ["linalg/no_std"]
